# cosmo-dl

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
cosmo_dl/: __init__.py  api.py  config.py  progress.py
cosmo_dl/cli/: auth_cmd.py  config_cmd.py  download_cmd.py  explore_cmd.py  main.py  source_cmd.py
cosmo_dl/engine/: __init__.py  downloader.py  explorer.py  file_manager.py  globus_utils.py  rate_limiter.py  session.py  types.py
cosmo_dl/registry/: __init__.py  loader.py  registry.py  source.py
cosmo_dl/registry/builtin/: __init__.py  auriga.py  eagle.py  fire.py  tng.py
tests/: test_api.py  test_config.py  test_integration.py  test_package.py
tests/cli/: test_main.py
tests/engine/: test_downloader.py  test_explorer.py  test_file_manager.py  test_init.py  test_rate_limiter.py  test_session.py  test_types.py
tests/registry/: test_builtin.py  test_loader.py  test_registry.py  test_source.py
