[project]
name = "cosmo-dl"
version = "0.1.0"
description = "Download cosmological simulation data with resume, multi-thread, and progress"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "yxi"}]
dependencies = [
    "httpx>=0.27",
    "tqdm>=4.66",
    "click>=8.1",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-mock>=3.12",
]
rich = ["rich>=13.0"]
fast-hash = ["xxhash>=3.0"]

[project.scripts]
cosmo-dl = "cosmo_dl.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cosmo_dl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
