[project]
name = "cosmo-dl"
version = "0.1.0"
description = "Download cosmological simulation data with resume, multi-thread, and progress"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Shuai Lu (卢帅)", email = "lushuai@stu.xmu.edu.cn"}]
dependencies = [
    "requests>=2.31",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "rich-click>=1.9.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "pytest-mock>=3.12",
    "ruff>=0.11",
    "mypy>=1.15",
]
fast-hash = ["xxhash>=3.0"]

[project.scripts]
cosmo-dl = "cosmo_dl.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cosmo_dl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Ruff — fast Python linter & formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort (import order)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "B008",   # do-not-perform-function-calls-in-argument-defaults
    "UP038",  # Use 'X | Y' in 'isinstance' instead of '(X, Y)'
]

[tool.ruff.lint.isort]
known-first-party = ["cosmo_dl"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
